<resources>
  <string name="app_name">JY-Android-Demo</string>
  <string name="dm003">Demo003</string>
  <string name="dm004">Demo004</string>
  <string name="dm005">Demo005</string>
  <string name="dm006">Demo006</string>
  <string name="dm007">Demo007</string>
  <string name="dm008">Demo008</string>
  <string name="dm009">Demo009</string>
  <string name="dm010">Demo010</string>


  <string name="hello">你好，世界</string>
  <string name="test_txt">测试文本123abcABC</string>
  <string name="weather_str">晴天</string>

  <string name="first_short">first</string>
  <string name="first_long">启停活动</string>
  <string name="second_short">second</string>
  <string name="second_long">来回跳转</string>
  <string name="third_short">third</string>
  <string name="third_long">登录返回</string>


  <string name="login_by_password">密码登录</string>
  <string name="login_by_verifycode">验证码登录</string>
  <string name="phone_number">手机号码：</string>
  <string name="input_phone_number">请输入手机号码</string>
  <string name="login_password">登录密码：</string>
  <string name="input_password">请输入密码</string>
  <string name="forget_password">忘记密码</string>
  <string name="remember_password">记住密码</string>
  <string name="login">登&#160; &#160; &#160; 录</string>
  <string name="input_new_password">输入新密码：</string>
  <string name="input_new_password_hint">请输入新密码</string>
  <string name="confirm_new_password">确认新密码：</string>
  <string name="input_new_password_again">请再次输入新密码</string>
  <string name="verifycode">&#160; &#160; 验证码：</string>
  <string name="verifycode2">&#160; &#160; &#160; &#160; 验证码：</string>
  <string name="input_verifycode">请输入验证码</string>
  <string name="get_verifycode">获取验证码</string>
  <string name="done">确&#160; &#160; &#160;定</string>

  <string name="file_provider">com.hg.jy.fileProvider</string>

</resources>