<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:gravity="center"
      android:text="@string/input_new_password"
      android:textColor="@color/black"
      android:textSize="17sp" />
    <EditText
      android:id="@+id/sz001_et_password_first"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"
      android:layout_weight="1"
      android:background="@drawable/editext_selector"
      android:hint="@string/input_new_password_hint"
      android:inputType="numberPassword"
      android:maxLength="11"
      android:textColor="@color/black"
      android:textColorHint="#cccccc"
      android:textSize="17sp" />
  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:gravity="center"
      android:text="@string/confirm_new_password"
      android:textColor="@color/black"
      android:textSize="17sp" />
    <EditText
      android:id="@+id/sz001_et_password_second"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"
      android:layout_weight="1"
      android:background="@drawable/editext_selector"
      android:hint="@string/input_new_password_again"
      android:inputType="numberPassword"
      android:maxLength="11"
      android:textColor="@color/black"
      android:textColorHint="#cccccc"
      android:textSize="17sp" />
  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:gravity="center"
      android:text="@string/verifycode2"
      android:textColor="@color/black"
      android:textSize="17sp" />
    <RelativeLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1">
      <EditText
        android:id="@+id/sz001_et_verifycode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/editext_selector"
        android:hint="@string/input_verifycode"
        android:inputType="numberPassword"
        android:maxLength="11"
        android:textColor="@color/black"
        android:textColorHint="#cccccc"
        android:textSize="17sp" />
      <Button
        android:id="@+id/sz001_btn_verifycode"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:text="@string/get_verifycode"
        android:textColor="@color/black"
        android:textSize="17sp" />
    </RelativeLayout>
  </LinearLayout>


  <Button
    android:id="@+id/sz001_btn_confirm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/done"
    android:textColor="@color/black"
    android:textSize="20sp" />
</LinearLayout>