<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="25sp" />

            <Button
                android:id="@+id/dm003"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dm003"
                android:textSize="25sp" />

            <Button
                android:id="@+id/dm004"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dm004"
                android:textSize="25sp" />

            <Button
                android:id="@+id/dm005"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dm005"
                android:textSize="25sp" />

            <Button
                android:id="@+id/dm006"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dm006"
                android:textSize="25sp" />

            <Button
                android:id="@+id/dm007"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dm007"
                android:textSize="25sp" />

            <Button
                android:id="@+id/dm008"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Demo008"
                android:textSize="25sp" />

            <Button
                android:id="@+id/dm009"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Demo009"
                android:textSize="25sp" />

            <Button
                android:id="@+id/dm010"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Demo010"
                android:textSize="25sp" />

            <Button
                android:id="@+id/dm011"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Demo011"
                android:textSize="25sp" />

            <Button
              android:id="@+id/dm012"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Demo012"
              android:textSize="25sp" />

            <Button
              android:id="@+id/dm013"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Demo013"
              android:textSize="25sp" />

            <Button
              android:id="@+id/dm014"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Demo014"
              android:textSize="25sp" />

            <Button
              android:id="@+id/dm015"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Demo015"
              android:textSize="25sp" />

            <Button
              android:id="@+id/dm016"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Demo016"
              android:textSize="25sp" />

            <Button
              android:id="@+id/dm017"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Demo017"
              android:textSize="25sp" />

            <Button
              android:id="@+id/dm018"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Demo018"
              android:textSize="25sp" />

            <Button
              android:id="@+id/dm019"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Demo019"
              android:textSize="25sp" />

            <Button
              android:id="@+id/dm020"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Demo020"
              android:textSize="25sp" />

            <Button
              android:id="@+id/dm021"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Demo021"
              android:textSize="25sp" />

            <Button
              android:id="@+id/sz001"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Sezo001"
              android:textSize="25sp" />

            <Button
              android:id="@+id/sz002"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Sezo002"
              android:textSize="25sp" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>
